--- a/pages/SC_ADMIN_005.html
+++ b/pages/SC_ADMIN_005.html
@@ -121,7 +121,7 @@
                                 <td class="body14R">
                                     <div class="ipt_rdo_wrap">
                                         <div class="ipt_rdo_btn_wrap">
-                                            <input type="radio" id="yes1" name="answer1" class="ipt_rdo_btnst btn-blue" checked>
+                                            <input type="radio" id="yes1" name="answer1" class="ipt_rdo_btnst btn-primary" checked>
                                             <label for="yes1" class="label_rdo_btnst"><span>예</span></label>
                                         </div>
                                         <div class="ipt_rdo_btn_wrap">
@@ -137,7 +137,7 @@
                                 <td class="body14R">
                                     <div class="ipt_rdo_wrap">
                                         <div class="ipt_rdo_btn_wrap">
-                                            <input type="radio" id="yes2" name="answer2" class="ipt_rdo_btnst btn-blue">
+                                            <input type="radio" id="yes2" name="answer2" class="ipt_rdo_btnst btn-primary">
                                             <label for="yes2" class="label_rdo_btnst"><span>예</span></label>
                                         </div>
                                         <div class="ipt_rdo_btn_wrap">
@@ -153,7 +153,7 @@
                                 <td class="body14R">
                                     <div class="ipt_rdo_wrap">
                                         <div class="ipt_rdo_btn_wrap">
-                                            <input type="radio" id="yes3" name="answer3" class="ipt_rdo_btnst btn-blue" checked>
+                                            <input type="radio" id="yes3" name="answer3" class="ipt_rdo_btnst btn-primary" checked>
                                             <label for="yes3" class="label_rdo_btnst"><span>예</span></label>
                                         </div>
                                         <div class="ipt_rdo_btn_wrap">
