--- a/guide_pages/styleguide_components.html
+++ b/guide_pages/styleguide_components.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="../assets/css/admin_osy.css">
 <link rel="stylesheet" href="../assets/css/common.css">
 <link rel="stylesheet" href="../assets/css/style.css">
+<link rel="stylesheet" href="../assets/css/admin_ssj.css">
 <style>
 .main_wrapper{min-width:1660px;}
 .main_wrapper .container{background:#fff;}
@@ -559,6 +560,27 @@
                         </div>
                     </div>
 
+
+                    <div style="width:380px;margin-right:30px;">
+                        <h4>image uploader</h4>
+                        <div class="flex">
+                            <div class="imgUploader"> 
+                                <ul class="imgList">
+                                    <li>
+                                        <input type="file" id="btn_imgUp" onchange="readURL(this);">
+                                        <label for="btn_imgUp" class="btn_imgUp">이미지 선택</label>
+                                        
+                                    </li>
+                                    <li class="upImg" style="display:none;">
+                                        <img src="" id="preview">
+                                        <button class="btn-del">이미지 삭제</button>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+
                    
                 </div>
             </div>
@@ -663,6 +685,7 @@
 
 <script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../assets/js/script.js"></script>
+<script type="text/javascript" src="../assets/js/script_ssj.js"></script>
 
 </body>
 </html>
