--- a/pages/SC_ADMIN_203_popup.html
+++ b/pages/SC_ADMIN_203_popup.html
@@ -7,8 +7,7 @@
 <meta name="title" content="HYUNDAI STEEL 표준관리시스템" />
 <title>HYUNDAI STEEL 표준관리시스템</title>
 <link rel="stylesheet" href="../assets/css/style.css">
-<link rel="stylesheet" href="../assets/css/admin_ssj.css">
-<link rel="stylesheet" href="../assets/css/admin_osy.css">
+<link rel="stylesheet" href="../assets/css/style_admin.css">
 </head>
 
 <body>
@@ -148,7 +147,7 @@
 
             
             <div class="box-white box-round8">
-                <div class="box-white box-line-bottom mb16">
+                <div class="box-white br-btm mb16">
                     <p class="body16R">
                         <b class="fc-blue">00</b> 건의 표준 문서 중 복원할 지점이 없는 <b class="fc-blue">00</b> 건의 표준 문서가 존재합니다.<br> 
                         다음에서 처리할 방법을 선택해 주십시오.
