--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -361,7 +361,7 @@
                 <a href="pages/SC_ADMIN_102.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg1"> 
+            <li class="bg2"> 
               <span class="sub-title">경영 매뉴얼 결재 모니터링</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_103.html" target="viewer">SC_ADMIN_103.html</a>
@@ -372,14 +372,14 @@
 
           <h2>시스템관리 [수급업체 작업표준]</h2>
           <ul>
-            <li class="bg1"> 
+            <li class="bg2"> 
               <span class="sub-title">수급업체 작업표준 결재 모니터링</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_201.html" target="viewer">SC_ADMIN_201.html</a>
                 <a href="pages/SC_ADMIN_201.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">폐기된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_202.html" target="viewer">SC_ADMIN_202.html</a>
@@ -522,6 +522,14 @@
               <div class="btn-wrap">
                 <a href="guide_pages/styleguide_components.html" target="viewer">styleguide_components.html</a>
                 <a href="guide_pages/styleguide_components.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+
+            <li>
+              <span class="sub-title">트리맵</span>
+              <div class="btn-wrap">
+                <a href="guide_pages/treemap.html" target="viewer">treemap.html</a>
+                <a href="guide_pages/treemap.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             
