--- a/guide_pages/common_admin_layout_main.html
+++ b/guide_pages/common_admin_layout_main.html
@@ -7,7 +7,7 @@
 <meta name="title" content="HYUNDAI STEEL 표준관리시스템" />
 <title>HYUNDAI STEEL 표준관리시스템</title>
 <link rel="stylesheet" href="../assets/css/style.css">
-<link rel="stylesheet" href="../assets/css/admin_ssj.css">
+<link rel="stylesheet" href="../assets/css/style_admin.css">
 </head>
 
 <body>
