--- a/guide_pages/treemap.html
+++ b/guide_pages/treemap.html
@@ -20,9 +20,9 @@
             <span class="logo_text body14B">표준관리시스템 시스템관리</span>
         </h1>
         <ul class="gnb">
-            <li><a href="#" class="body16M">표준관리</a></li>
+            <li class="active"><a href="#" class="body16M">표준관리</a></li>
             <li><a href="#" class="body16M">해외법인 표준관리</a></li>
-            <li class="active"><a href="#" class="body16M">경영 매뉴얼</a></li>
+            <li><a href="#" class="body16M">경영 매뉴얼</a></li>
             <li><a href="#" class="body16M">수급업체 작업표준</a></li>
             <li><a href="#" class="body16M">이력 조회</a></li>
             <li><a href="#" class="body16M">시스템 관리</a></li>
@@ -41,25 +41,16 @@
 
             <div class="content_wrap">
 
-                <!-- SNB -->
-                <div class="left_filter_cont">
-                    <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_1.svg"></div>인증 기록 분류 체계</a></li>
-                    </ul>
-                </div>
-                <!-- //SNB -->
 
 
                 <div class="content">
-                    <ol class="breadcrumb">
-                        <li>경영 매뉴얼</li>
-                        <li class="on">경영 매뉴얼 분류 체계</li>
-                    </ol>
+
 
                     <!-- 왼쪽에 트리가 위치하는 경우의 cont -->
                     <div class="Wrap_tree_cont">
                         <div class="l_Side">
-                            <h3 class="title head18B">분류 체계</h3>
+
+                            
                             <!--트리맵-->
                             <div class="portlet_edit_left">
                                 <div class="srch_portlet">
@@ -284,125 +275,9 @@
                                 <button class="body14R">삭제</button>
                             </div>
                             <!-- //트리 설정 팝업 -->
-                        </div>
-
-
-                        <div class="r_Box">
-                            <div class="btn_div">
-                                <button class="btn btn-primary btn-medium"><span class="body14B">등록</span></button>
-                                <button class="btn btn-line-01 btn-medium"><span class="body14B">수정</span></button>
-                                <button class="btn btn-line-01 btn-medium"><span class="body14B">이동</span></button>
-                                <button class="btn btn-line-01 btn-medium"><span class="body14B">삭제</span></button>
-                            </div>
-
-                            <div class="box-white">
-                                <div class="title">
-                                    <div class="txtbox">
-                                        <h4 class="head20B">ISO/IATF</h4>
-                                        <ol class="breadcrumb">
-                                            <li>품질</li>
-                                            <li class="on">당진</li>
-                                        </ol>
-                                    </div>
-                                </div>
-                                <ul class="box-in-form">
-                                    <li class="table">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">등록일</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">2024-11-11</p>
-                                        </div>
-                                    </li>
-                                    <li class="table">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">수정일</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">2024-11-11</p>
-                                        </div>
-                                    </li>
-                                    <li class="table w100">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">정렬 순서</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">010</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="table w100 pay_detail">
-                                        <div class="th form-tit tit2">
-                                            <h5 class="list-dot body14B">권한 관리</h5>
-                                        </div>
-                                        <ul class="box-in-form">
-                                            <li class="table w100">
-                                                <div class="th form-tit tit2">
-                                                    <p class="list-dot body14B">읽기</p>
-                                                </div>
-                                                <div class="td form-div">
-                                                    <ul class="authList">
-                                                        <li>
-                                                            <div class="body14R fc-500"><div class="ico"><img src="../assets/images_admin/auth_sort_ico01.svg"></div>현대 제철</div>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                            <li class="table w100">
-                                                <div class="th form-tit tit2">
-                                                    <p class="list-dot body14B">쓰기</p>
-                                                </div>
-                                                <div class="td form-div">
-                                                    <ul class="authList">
-                                                        <li>
-                                                            <div class="body14R fc-500"><div class="ico"><img src="../assets/images_admin/auth_sort_ico02.svg"></div>현대제철표준팀</div>
-                                                            <ul class="teamNm">
-                                                                <li class="summary12R">현대제철</li>
-                                                                <li class="summary12R">ㅇㅇㅇ본부</li>
-                                                                <li class="summary12R">XXX 실</li>
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                            <li class="table w100">
-                                                <div class="th form-tit tit2">
-                                                    <p class="list-dot body14B">쓰기</p>
-                                                </div>
-                                                <div class="td form-div">
-                                                    <ul class="authList">
-                                                        <li>
-                                                            <div class="body14R fc-500"><div class="ico person"><img src="../assets/images_admin/auth_sort_ico_person.svg"></div>정혜정</div>
-                                                            <ul class="teamNm">
-                                                                <li class="summary12R">XXX 실</li>
-                                                            </ul>
-                                                            <button class="btn-del">삭제</button>
-                                                        </li>
-                                                        <li>
-                                                            <div class="body14R fc-500"><div class="ico person"><img src="../assets/images_admin/auth_sort_ico_person.svg"></div>정혜정</div>
-                                                            <ul class="teamNm">
-                                                                <li class="summary12R">XXX 실</li>
-                                                            </ul>
-                                                            <button class="btn-del">삭제</button>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="table w100">
-                                        <div class="th form-tit tit2">
-                                            <p class="list-dot body14B">설명</p>
-                                        </div>
-                                        <div class="td form-div">
-                                            <p class="body14R fc-500">IATF 16949:2016은 자동차 산업 공급망 및 조립 공정에서 결함 예방과 변형 및 낭비 감소를 강조하면서 지속적인 개선을 제공하는 품질 관리시스템 개발을 목표로 하는 기술 사양이다. ISO 9001 표준을 기반으로 하며 1999년 6월에 첫 번째 버전인 ISO/TS 16949:1999가 발표되었다.</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
 
                         </div>
+
                     </div>
                     <!-- //왼쪽에 트리가 위치하는 경우의 cont -->
 
@@ -427,7 +302,7 @@
 <script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../assets/js/script.js"></script>
 <script>
-    treemap();
+treemap();
 </script>
 
 </body>
