--- a/pages/SC_ADMIN_102.html
+++ b/pages/SC_ADMIN_102.html
@@ -7,7 +7,7 @@
 <meta name="title" content="HYUNDAI STEEL 표준관리시스템" />
 <title>HYUNDAI STEEL 표준관리시스템</title>
 <link rel="stylesheet" href="../assets/css/style.css">
-<link rel="stylesheet" href="../assets/css/admin_ssj.css">
+<link rel="stylesheet" href="../assets/css/style_admin.css">
 </head>
 
 <body>
@@ -374,7 +374,6 @@
 
 <script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../assets/js/script.js"></script>
-<script type="text/javascript" src="../assets/js/script_ssj.js"></script>
 <script>
     toggleButton();
 </script>
