--- a/pages/SC_ADMIN_009_popup.html
+++ b/pages/SC_ADMIN_009_popup.html
@@ -101,7 +101,7 @@
                 <ul class="box-in-form">
                     <li class="table">
                         <div class="td form-div pl w100">
-                            <div class="ipt_rdo_wrap">
+                            <div class="ipt_rdo_wrap flex-column">
                                 <div class="ipt_rdo_div w100">
                                     <input type="radio" id="cc1" name="cc" class="ipt_rdo">
                                     <label for="cc1" class="label_rdo"><span>복원할 수 있는 00건의 문서만 복원</span></label>
