--- a/pages/SC_ADMIN_203_popup.html
+++ b/pages/SC_ADMIN_203_popup.html
@@ -157,7 +157,7 @@
                 <ul class="box-in-form">
                     <li class="table">
                         <div class="td form-div pl w100">
-                            <div class="ipt_rdo_wrap">
+                            <div class="ipt_rdo_wrap flex-column">
                                 <div class="ipt_rdo_div w100">
                                     <input type="radio" id="cc1" name="cc" class="ipt_rdo">
                                     <label for="cc1" class="label_rdo"><span>복원할 수 있는 00건의 문서만 복원</span></label>
@@ -175,7 +175,7 @@
                                                 <div class="td form-div">
                                                     <div class="flex items-center">
                                                         <div class="ipt_div">
-                                                              <input type="text" placeholder="">
+                                                            <input type="text" placeholder="">
                                                         </div>
                                                         <button class="btn-del">삭제</button>
                                                         <button class="btn btn-line-01 btn-medium"><span class="body14B">선택</span></button>
